# studying-aiogram

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
