[tool.poetry]
name = "studying-aiogram"
version = "0.1.0"
description = ""
authors = ["Artem Vinogradov <vinartgen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
aiogram = "^3.8.0"
apscheduler = "^3.10.4"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
